# Pond

./: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TEST_REQUIREMENTS.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: dd3602e12c39_initial_database_setup_with_pgvector_.py
docs/: DESIGN.md  SPEC.md  TEST_REQUIREMENTS.md  api.md  classDiagram.mmd  entity_learning.md  schema.sql
src/pond/: __main__.py  config.py  metrics.py  models.py  startup_check.py  validation.py
src/pond/api/: dependencies.py  main.py  middleware.py  models.py
src/pond/api/routes/: health.py  memories.py
src/pond/cli/: __init__.py  main.py
src/pond/domain/: __init__.py  base.py  entities.py  memory.py  repository.py  tag.py
src/pond/infrastructure/: __init__.py  auth.py  database.py  schema.py
src/pond/mcp/: __init__.py  __main__.py  config.py  server.py
src/pond/mcp/templates/: health.md.j2  init.md.j2  recent.md.j2  search.md.j2  store.md.j2
src/pond/services/: embeddings.py  validation.py
src/pond/services/embeddings/: __init__.py  base.py  factory.py  mock.py  ollama.py
src/pond/utils/: time_service.py
src/tests/: conftest.py
src/tests/fixtures/: config.py  database.py  embeddings.py
src/tests/integration/: test_api_endpoints.py  test_auth.py  test_critical_path.py  test_database_infrastructure.py  test_entity_extraction.py  test_ollama_embedding.py  test_repository_database.py  test_request_tracking.py  test_similarity_donut.py  test_splash_functionality.py  test_unified_search.py
src/tests/unit/: test_config.py  test_domain_models.py  test_embedding_factory.py  test_embedding_providers.py  test_embedding_service.py  test_embeddings.py  test_feature_extraction.py  test_performance_critical_path.py  test_time_service.py  test_validations.py
tests/: conftest.py  test_core_flows.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
