[project]
name = "pond"
version = "0.1.0"
description = "Semantic memory system for AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26.0",
    "click>=8.1.0",  # For CLI
    "fastmcp>=0.2.0",  # For MCP server
]

[project.scripts]
pond = "pond.cli.main:cli"
pond-mcp = "pond.mcp.server:main"
